feat: unify private+public into single repo
- Keep all features (i18n, PWA branch, watchdog, operations tab)
- Add SKILL.md, SECURITY.md, env.example, start.sh.example from public
- .gitignore excludes personal config (start.sh, .env, model defaults)
- Remove tracked personal files (ops-session-model-defaults, tasks, scripts)
- Rename to 'OpenClaw Dashboard' (public-facing)

--- a/agent-dashboard.html
+++ b/agent-dashboard.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-<title>Jony's OpenClaw Dashboard</title>
+<title>OpenClaw Dashboard</title>
 <link rel="icon" href="/icon.svg" type="image/svg+xml">
 <link rel="apple-touch-icon" sizes="180x180" href="/icon-180.png">
 <link rel="manifest" href="/manifest.json">
@@ -17,8 +17,8 @@
 <meta property="og:title" content="OpenClaw Agent Dashboard">
 <meta property="og:description" content="Glassmorphic agent management dashboard for OpenClaw with task kanban, document editor, API monitoring & real-time agent tracking.">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://github.com/JonathanJing/jony-openclaw-dashboard">
-<meta property="og:image" content="https://raw.githubusercontent.com/JonathanJing/jony-openclaw-dashboard/main/screenshots/tasks-kanban.png">
+<meta property="og:url" content="https://github.com/JonathanJing/openclaw-dashboard">
+<meta property="og:image" content="https://raw.githubusercontent.com/JonathanJing/openclaw-dashboard/main/screenshots/tasks-kanban.png">
 <script src="https://cdn.jsdelivr.net/npm/marked@14/marked.min.js"></script>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&family=Space+Mono:wght@400;700&display=swap');
@@ -812,7 +812,7 @@ header{display:flex;align-items:center;justify-content:space-between;padding:16p
   <!-- Header -->
   <header>
     <div>
-      <div class="logo">🦞 Jony's OpenClaw Dashboard</div>
+      <div class="logo">🦞 OpenClaw Dashboard</div>
       <div class="logo-sub">24/7 Online</div>
     </div>
     <div class="header-right">
@@ -4875,7 +4875,7 @@ document.addEventListener('keydown', e => {
 </script>
 <footer style="text-align:center;padding:24px 0 16px;color:#8b949e;font-size:0.85rem;font-family:'Outfit',sans-serif;">
   Built by <a href="https://github.com/JonathanJing" target="_blank" style="color:#7c5cfc;text-decoration:none;">Jony Jing</a> ·
-  <a href="https://github.com/JonathanJing/jony-openclaw-dashboard" target="_blank" style="color:#8b949e;text-decoration:none;">GitHub</a>
+  <a href="https://github.com/JonathanJing/openclaw-dashboard" target="_blank" style="color:#8b949e;text-decoration:none;">GitHub</a>
 </footer>
 </body>
 </html>
