feat: model registry + validation layer (models-registry.json as single source of truth)
- models-registry.json: single file to update when adding/renaming models
- loadModelsRegistry(): loads from file, warns on bad format, falls back to built-in
- validateModelId(): blocks write if model not provider/model format — returns 400
- startupModelCheck(): validates all aliases on boot, migrates stale legacy ids in
  session defaults and cron store (gemini-3.0-flash → gemini-3-flash-preview, etc.)
- /ops/models: now returns aliases + registry for frontend consumption
- frontend: MODEL_OPTIONS populated dynamically from /ops/models registry on load

--- a/agent-dashboard.html
+++ b/agent-dashboard.html
@@ -2321,6 +2321,11 @@ async function loadAgentMonitor() {
 }
 
 function loadSystemInfo() {
+  // Refresh model options from server registry (models-registry.json)
+  apiFetch('/ops/models').then(data => {
+    if (data.registry) refreshModelOptions(data.registry);
+  }).catch(() => {});
+
   apiFetch('/ops/system').then(sys => {
     // Update global default model from live config
     if (sys.models?.primary) {
@@ -2530,7 +2535,9 @@ const MODEL_DISPLAY_NAMES = [
 // ─── Model Selector ───
 let globalDefaultModel = 'claude-sonnet-4-6'; // updated dynamically from /ops/system
 
-const MODEL_OPTIONS = [
+// Starts with hardcoded defaults; refreshed from /ops/models on load.
+// To update model names/ids: edit models-registry.json on the server — no code change needed.
+let MODEL_OPTIONS = [
   { value: 'default', label: '', full: null, isDefault: true },
   { value: 'opus',   label: 'Claude Opus 4',   full: 'claude-opus-4-6' },
   { value: 'sonnet', label: 'Claude Sonnet 4', full: 'claude-sonnet-4-6' },
@@ -2538,6 +2545,17 @@ const MODEL_OPTIONS = [
   { value: 'pro',    label: 'Gemini 3 Pro',     full: 'gemini-3-pro-preview' },
   { value: 'codex',  label: 'GPT-5.3 Codex',   full: 'gpt-5.3-codex' },
 ];
+
+function refreshModelOptions(registry) {
+  if (!registry || typeof registry !== 'object') return;
+  const opts = [{ value: 'default', label: '', full: null, isDefault: true }];
+  for (const [alias, entry] of Object.entries(registry)) {
+    const id = typeof entry === 'string' ? entry : entry?.id;
+    const label = (typeof entry === 'object' && entry?.label) ? entry.label : alias;
+    if (id) opts.push({ value: alias, label, full: id.includes('/') ? id.split('/').pop() : id });
+  }
+  MODEL_OPTIONS = opts;
+}
 
 function getDefaultModelLabel() {
   // Show actual model name instead of "默认"
